--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,7 @@
     ["transform-es2015-modules-commonjs", { "loose": true }],
     "transform-class-properties",
     ["transform-es2015-classes", { "loose": true }],
+    "transform-es2015-arrow-functions",
     "transform-es2015-block-scoping",
     "transform-es2015-function-name",
     "transform-es3-property-literals",
