--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-loader": "^6.2.4",
     "babel-plugin-check-es2015-constants": "^6.7.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
     "babel-plugin-transform-es2015-block-scoping": "^6.7.1",
     "babel-plugin-transform-es2015-classes": "^6.24.1",
     "babel-plugin-transform-es2015-function-name": "^6.5.0",
